--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 :root{
 
-
-
-    
+--fundo:	#006400;
+--cartão-frente: 	#008080;
+--cartão-verso: #2E8B57;
+--destaque: #008000;
+--preto: 	#000000;
+--branco: #ffffff;
 }
