--- a/style.css
+++ b/style.css
@@ -11,7 +11,16 @@
 body{
 
 background-color: var(--fundo);
+margin: 0%;
+}
 
 
+footer{
+    background-color:  var(--preto);
+    position: fixed;
+    bottom: 0;
+    color:  var(--branco);
+    width: 100%;
+    text-align: center;
 
 }
