--- a/style.css
+++ b/style.css
@@ -22,5 +22,11 @@ footer{
     color:  var(--branco);
     width: 100%;
     text-align: center;
-
+}
+#container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 4rem;
+    gap: 3rem;
 }
