--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ footer{
     width: 100%;
     text-align: center;
 }
-#container{
+#conteiner{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
