--- a/style.css
+++ b/style.css
@@ -46,4 +46,20 @@ footer{
     background-color: var(--cartão-frente);
     text-align: center;
     height: 100%;
+    color: var(--branco);
+}
+
+
+.conteudo-cartao h3 {
+    position: absolute;
+    text-align: left;
+    border: 1px solid var(--preto);
+    border-radius: 6rem;
+    margin: 0.6rem;
+    padding: 0.6rem;
+}
+
+.conteudo-cartao p {
+    margin-top: 4rem;
+    padding: 2rem;
 }
