--- a/style.css
+++ b/style.css
@@ -39,15 +39,15 @@ footer{
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
-    border-radius: 2rem;
 
 }
 
 
 .conteudo-cartao {
-    background-color: var(--cartão-verso);
+    background-color: var(--branco);
     text-align: center;
     height: 100%;
+    border-radius: 2rem;
 }
 
 
