--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ footer{
     border-radius: 2rem;
     transform-style: preserve-3d;
     transition: transform 300ms ease-in-out;
+    backface-visibility: hidden;
 }
 
 
