--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ footer{
     border-radius: 6rem;
     margin: 0.6rem;
     padding: 0.6rem;
+    backface-visibility: hidden;
 }
 
 .conteudo-cartao p {
@@ -77,4 +78,9 @@ footer{
 
 .pergunta-cartao, .resposta-cartao {
     backface-visibility: hidden;
+}
+
+
+.resposta-cartao {
+    transform: rotateY(180deg);
 }
