--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ footer{
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
+    text-align: center
 
 }
 
@@ -66,7 +67,7 @@ footer{
 }
 
 .conteudo-cartao p {
-    margin-top:auto;
+    margin-top: 4rem;
     padding: 2rem;
     font-size: 1.4vw;
     
