--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
 
 --fundo:		#020d3f;
---cartão-frente:#FFD700;
+--cartão-frente:#daa520;
 --cartão-verso: #2E8B57;
 --destaque: #006400;
 --preto: 	#000000;
