--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
 
---fundo:		#020d3f;
---cartão-frente:#daa520;
+--fundo:		#7b0000;
+--cartão-frente:#999589;
 --cartão-verso: #2E8B57;
 --destaque: #006400;
 --preto: 	#000000;
