--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
 
 --fundo:		#7b0000;
---cartão-frente:#ffd000;
+--cartão-frente:#a0a0a0;
 --cartão-verso: #2E8B57;
 --destaque: #006400;
 --preto: 	#000000;
