--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 :root{
-
 --fundo:		#7b0000;
 --cartão-frente:#a0a0a0;
 --cartão-verso: #2E8B57;
@@ -72,7 +71,7 @@ footer{
     
 }
 
-.cartao.active, .conteudo-cartao{
+.cartao:hover, .conteudo-cartao{
     transform: rotateY(180deg);
 }
 
