--- a/style.css
+++ b/style.css
@@ -71,13 +71,13 @@ footer{
     
 }
 
-.cartao:hover, .conteudo-cartao{
+.cartao.active, .conteudo-cartao{
     transform: rotateY(180deg);
 }
 
-.pergunta-cartao, .resposta-cartao {
+/*.pergunta-cartao, .resposta-cartao {
     backface-visibility: hidden;
-}
+}*/
 
 
 .resposta-cartao {
