--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --fundo: #c6b888;
-    --cartao-frente: #1f120e;
-    --cartao-verso: #633e25;
-    --destaque: #582a2a;
+    --fundo: #126450;
+    --cartao-frente: #190c53;
+    --cartao-verso: #7071b1;
+    --destaque: #0a4553;
     --preto: #000000;
     --branco: #ffffff;
 
