--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 margin: 0%;
 }
  header{
-    background-color: var(--preto);..
+    background-color: var(--preto);
     display: flex;
     justify-content: space-around;
     padding: 1rem;
